# vercel-badge

./: .gitignore  LICENSE.md  README.md  pyproject.toml
website/: docusaurus.config.js  package-lock.json  vercel.json
website/api/: index.py  requirements.txt
website/src/pages/: success.md
website/src/theme/: NotFound.js
