[tool.poetry]
name = "vercel-badge"
version = "0.1.0"
description = ""
authors = ["celsius narhwal <celsiusnarhwal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
requests = "^2.28.1"
PyGithub = "^1.55"
rsa = "^4.9"
path = "^16.4.0"
cryptography = "^37.0.4"

[tool.poetry.dev-dependencies]
doppler-env = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
